<resources>
    <string name="app_name" translatable="false">Working Time Tracker</string>
    <string name="account_name_pref_key" translatable="false">com.example.working_time_tracker.accountName</string>
    <string name="calendar_app">Open Calendar App</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="clocked_in">Clocked In</string>
    <string name="clocked_out">Clocked Out</string>
    <string name="calendar_name_pref_def">Work</string>
    <string name="calendar_name_pref_title">Calendar Name</string>
    <string name="calendar_name_pref_key" translatable="false">com.example.working_time_tracker.calendarName</string>
    <string name="calendar_name_pref_summary">Please provide your calendar\'s name</string>
    <string name="event_name_pref_def">Work</string>
    <string name="event_name_pref_title">Event Name</string>
    <string name="event_name_pref_key" translatable="false">com.example.working_time_tracker.eventName</string>
    <string name="event_name_pref_summary">Please provide your eventWrapper\'s name</string>
    <string name="max_time_pref_key" translatable="false">com.example.working_time_tracker.maxTime</string>
    <string name="min_time_pref_key" translatable="false">com.example.working_time_tracker.minTime</string>
    <string name="num_max_results_pref_key" translatable="false">com.example.working_time_tracker.numMaxResults</string>
    <string name="time_pref_title">Daily Working Time</string>
    <string name="time_pref_key" translatable="false">com.example.working_time_tracker.timePref</string>
    <string name="last_time_key" translatable="false">com.example.working_time_tracker.lastTimeKey</string>
    <string name="last_time_state_key" translatable="false">com.example.working_time_tracker.lastTimeStateKey</string>
</resources>